--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
+   
 }
 .container{
 height: 960px;
@@ -11,14 +11,15 @@ display: flex;
 flex-wrap: wrap;
 justify-content: center;
 align-items: center;
-box-sizing: border-box;
+/* box-sizing: border-box; */
 
 }
 .grid{
-    width: 25px;
-    height: 25px;
+    flex:1 1 1px;
+    min-height:20px ;
     background-color: rgb(215,215 ,219);
     transition: 0s 180s;
+  
 }
 .grid:hover{
     background-color:rgb(167, 167, 207 );
