--- a/style.css
+++ b/style.css
@@ -1,31 +1,52 @@
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   
-}
-.container{
-height: 960px;
-width: 960px;
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
-align-items: center;
-/* box-sizing: border-box; */
-
-}
-.grid{
-    flex:1 1 1px;
-    min-height:20px ;
-    background-color: rgb(215,215 ,219);
-    transition: 0s 180s;
-  
-}
-.grid:hover{
-    background-color:rgb(167, 167, 207 );
-    transition: 0s;
-}
-button{
-    align-self: flex-start;
+body {
+    position: relative;
     
-}
+    }
+    
+    .container {
+      width: 960px; 
+      height: 960px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      flex-direction: column;
+      border: rgb(216, 15, 210) solid 2px;
+      box-sizing: border-box;
+      padding:5px;
+    
+    }
+    
+    
+    
+    .col {
+     
+      display:flex;
+      flex: 1 1 0;
+      background-color: rgb(168, 196, 237);
+      
+      border: 1px solid rgb(255, 255, 255);
+      box-sizing: border-box;
+     
+      transition: 0s 180s;
+    }
+    
+    .col:hover {
+      background-color: rgb(167, 167, 207);
+    
+      transition: 0s;
+    }
+    
+    
+    .main-container{
+      display: flex;
+      
+     justify-content: center;
+     align-items: center;
+      flex-direction: column;
+      margin-bottom: 10px;
+    }
+    button{
+      margin-bottom: 60px;
+      border-radius: 8px;
+      padding: 3px 8px;
+    }
