--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-body {
-    position: relative;
-    
-    }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
     
     .container {
       width: 600px; 
